add temp to gitignore and fix option in java9-command-line script